--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="menu">
       <main>
-        <img class="ida" src="/img/creation1.jpeg" alt="ida's creation">
+        <img class="ida" src="img/creation1.jpeg" alt="ida's creation">
         <section class="creation"><br>
           <article class="item">
             <p class="style">Chalkboards</p><p class="price">$3.00</p>
